--- a/00_Preface-Kor.ipynb
+++ b/00_Preface-Kor.ipynb
@@ -12,7 +12,7 @@
     "이 노트들은 2017년 서울대학교 천문학과의 \"천문 관측 및 실험 1\"(이하 천관실) 과목의 실습을 위해 처음으로 만들어졌습니다.\n",
     "\n",
     "* 강의자: Masateru Ishiguro \n",
-    "* 조교:  Yoonsoo Park Bach\n",
+    "* 조교:  Yoonsoo P Bach & Na-eun Shin\n",
     "\n",
     "이 머릿말은 강의노트들을 만들 때에 고려한 기본적인 철학과, IRAF기반의 기존 천관실 체계에서 AstroPy 기반의 체계로 옮긴 이유 등을 서술하기 위한 조교의 변(辯)을 담고 있습니다. \n",
     "\n",
@@ -20,7 +20,8 @@
     "These notes were first made for \"Astronomical Observation 1\" (AO1 hereafter) of the Dept. of Astronomy of Seoul National University. \n",
     "\n",
     "* Lecturer: Prof. Masateru Ishiguro\n",
-    "* TA: Yoonsoo Park Bach\n",
+    "* TA: Yoonsoo P. Bach & Na-eun Shin\n",
+    "\n",
     "\n",
     "This preface contains some comments to explain ground philosophy while making the lecture notes and the reason for transforming from previous IRAF-based AO1 system to Astropy-based system. "
    ]
@@ -62,7 +63,7 @@
     "\n",
     "### IRAF의 문제\n",
     "\n",
-    "오랜 세월 사실상 천문학적 이미지 처리의 표준이 되어 온 NOAO의 IRAF는 크게 두 가지의 문제점이 있었습니다. 가장 중요한 문제점은 공식적인 IRAF의 수정이나 보완은 현재의 2.16.1 버전 이후 아마도 없을 것이라는 점이며, __STScI는 IRAF 관련 소프트웨어의 지원을 차츰 줄여가고 있습니다__. 즉, 어느 심각한 결함이 발견되었다 하더라도, 근시일내에 그 문제점이 해결되리라는 희망을 갖기 어렵습니다. 또한 굳이 큰 문제가 아니더라도 소프트웨어의 알고리즘 최적화 문제에 새로운 해결책이 알려졌다 한들 그것이 적용될 가능성이 낮습니다. 이는 이미지 하나가 GB단위로 커지는 현대 천문학에 있어 큰 단점이 될 수 밖에 없습니다. 대표적으로 [L.A. Cosmic](http://www.astro.yale.edu/dokkum/lacosmic/)이라는 우주선(cosmic ray) 제거 툴은 IRAF와 Python 버전이 동시에 공개되어 있는데, 큰 최적화 노력을 들이지 않았음에도 Python 버전이 IRAF 버전보다 빠릅니다. 앞으로 처리해야할 데이터의 양이 지수함수적으로 늘어나게 되는 경우 IRAF는 사용되기 어려울 것으로 판단됩니다. 전천을 Subaru 8-m 망원경 수준으로 탐사하게 될 LSST의 경우에도 이러한 방대한 양의 데이터를 처리하기 위해 IRAF를 배제하고 Python 기반으로 데이터를 처리할 것으로 계획되고 있습니다. \n",
+    "오랜 세월 사실상 천문학적 이미지 처리의 표준이 되어 온 NOAO의 IRAF는 크게 두 가지의 문제점이 있었습니다. 가장 중요한 문제점은 공식적인 IRAF의 수정이나 보완은 현재의 2.16.1 버전 이후 아마도 없을 것이라는 점이며, __STScI는 IRAF 관련 소프트웨어의 지원을 차츰 줄여가고 있습니다__. 즉, 어느 심각한 결함이 발견되었다 하더라도, 근시일내에 그 문제점이 해결되리라는 희망을 갖기 어렵습니다. 또한 굳이 큰 문제가 아니더라도 소프트웨어의 알고리즘 최적화 문제에 새로운 해결책이 알려졌다 한들 그것이 적용될 가능성이 낮습니다. 이는 이미지 하나가 GB단위로 커지는 현대 천문학에 있어 큰 단점이 될 수 밖에 없습니다. 대표적으로 [L.A. Cosmic](http://www.astro.yale.edu/dokkum/lacosmic/)이라는 우주선(cosmic ray) 제거 툴은 IRAF와 Python 버전이 동시에 공개되어 있는데 (사실  `astroscrappy`의 Python 버전은 비록 Python에서 사용하는 함수이지만 C++을 사용합니다), 큰 최적화 노력을 들이지 않았음에도 Python 버전이 IRAF 버전보다 빠릅니다. IRAF가 병렬 컴퓨팅을 지원하지 않기 때문에 이러한 속도 차이는 최대 100배 이상 날 수도 있습니다. 앞으로 처리해야할 데이터의 양이 지수함수적으로 늘어나게 되는 경우 IRAF는 사용되기 어려울 것으로 판단됩니다. 전천을 Subaru 8-m 망원경 수준으로 탐사하게 될 LSST의 경우에도 이러한 방대한 양의 데이터를 처리하기 위해 IRAF를 배제하고 Python 기반으로 데이터를 처리할 것으로 계획되고 있습니다. \n",
     "\n",
     "IRAF의 두 번째 문제점은 이 소프트웨어가 *오래된 것*, 그러니까 처음 방대한 인력을 쏟아붓던 시기가 현재 우리의 컴퓨터와 달랐던 시기이기에 가지는 문제인데, 다음과 같은 것들을 포함합니다:\n",
     "\n",
@@ -77,26 +78,64 @@
     " \n",
     "마지막 문제점에 대한 에피소드 중 하나입니다만, 아직도 IRAF에서는 비항성천체의 측광을 위한 적합한 패키지가 없는 반면, Python에는 벌써 [TRIPPY](http://pure.qub.ac.uk/portal/files/118075999/Fraser_2016_AJ_151_158.pdf)라는 툴이 개발되어 공개돼 있습니다. IDL에서는 이미 수도 없이 많은 패키지들이 개발되어 있습니다. \n",
     "\n",
+    "### Problems of IRAF\n",
+    "For decades, IRAF of NOAO has become a virtual standard of astronomical image reduction process. As any other tools, it also have had some problems, and I want to point out two of them. The most important problem is that “required” updates of IRAF may not be there after version 2.16.1, at least officially, and **STScI is now decreasing humanpower to IRAF development / maintanance**. In other words, we cannot hope it to be fixed / updated even if there is serious bug or problem, and few such problems are there, though they are documented thoroughly by STScI. Even though such serious problems may be alleviated in the future, it is almost hopeless to “optimize” IRAF. There are a plethora of different ideas and algorithms to make computation faster, and are still being studied by frontier computer scientists, yet they may not be implemented to IRAF. This is critical, considering one single astronomical image is now becoming size of giga-bytes. My favorite example is [L.A. Cosmic](http://www.astro.yale.edu/dokkum/lacosmic/), which is a tool for removing cosmic-rays from astronomical images. We have both IRAF and Python versions (Python versions from `astroscrappy` actually uses C++, though it is fully usable on Python), and the Python version is order of magnitude faster than that of IRAF version. It can be up to ~100+ times faster, not only because it works efficiently, but also because IRAF does not support parallel computing. The amount of data we have to analyze increases exponentially over time. LSST, which will survey all-sky with a depth of Subaru, or JWST, which is next-generation-HST, decided to use Python against IRAF. \n",
+    "\n",
+    "Second problem of IRAF is because it is an **old** software, i.e., a problem that any other programs may have if they were developed decades ago, and it include:\n",
+    "\n",
+    "* Works only on 32-bit environment\n",
+    " * We need some trick to run IRAF on modern-standard, 64-bit, computers.\n",
+    " * This treatment is required almost only for IRAF. Almost none of modern softwares require 32-bit environment.\n",
+    "* Works only on UNIX-based OS\n",
+    " * It is bothersome for majority of Windows computer users to have redundant LINUX computer for IRAF purpose, unless MS supports UNIX-like environment in the very near future.\n",
+    "* CL has no debug functionality, so it is bad for large programming.\n",
+    " * Each observatory needs its own software for data reduction. CL is not good for such purpose.\n",
+    " * Actually, many different observatories makes their own routines with IDL, not CL, and distribute it to the observers.\n",
+    "\n",
+    "\n",
+    "\n",
     "### PyRAF 의 등장과 문제\n",
     " \n",
-    "PyRAF는 이러한 문제점들 중 마지막 문제점인 디버깅과 CL의 복잡성 문제를 해결하기 위해 Python을 기반으로 만들어진 대안책입니다. [링크](http://iraf.net/forum/viewtopic.php?showtopic=97713&lastpost=true)에 의하면 1999년에도 이미 Python을 이용해 CL을 대체하는 시도는 진행중이었습니다. PyRAF가 처음 만들어지던 2000년대 이전의 시기에는 IRAF가 완전히 무료로 배포되던 시절도 아니니, 완벽한 오픈소스인 Python을 이용한 이 시도는 획기적인 것이었습니다. PyRAF는 또한 Windows 환경에서도 작동합니다 (IRAF 중 일부 중요한 기능들은 *애초에* UNIX에서만 작동하게끔 짜여져 있어 Windows에서 도저히 작동하지 않으므로 주의하라고 STScI 공식 웹사이트에서도 언급합니다). \n",
+    "PyRAF는 이러한 문제점들 중 마지막 문제점인 디버깅과 CL의 복잡성 문제를 해결하기 위해 Python을 기반으로 만들어진 대안책입니다. [링크](http://iraf.net/forum/viewtopic.php?showtopic=97713&lastpost=true)에 의하면 1999년에도 이미 Python을 이용해 CL을 대체하는 시도는 진행중이었습니다. 이 [보고서](https://arxiv.org/abs/1610.03159) 에서는 1998년에 시작되었다고 합니다. PyRAF가 처음 만들어지던 2000년대 이전의 시기에는 IRAF가 완전히 무료로 배포되던 시절도 아니니, 완벽한 오픈소스인 Python을 이용한 이 시도는 획기적인 것이었습니다. PyRAF는 또한 Windows 환경에서도 작동합니다 (IRAF 중 일부 중요한 기능들은 *애초에* UNIX에서만 작동하게끔 짜여져 있어 Windows에서 도저히 작동하지 않으므로 주의하라고 STScI 공식 웹사이트에서도 언급합니다). \n",
     "\n",
     "그러나 이 PyRAF도 몇 가지 문제점이 있습니다. 우선 __동일한 CL 코드라도 IRAF와 PyRAF의 결과물이 다를 때가 있습니다__. 이는 [PyRAF Tutorial](http://stsdas.stsci.edu/pyraf/doc.old/pyraf_tutorial/PythonPrereq.html) 에서도 암시적으로 설명하고 있는데, \"You can even run more than 90% of IRAF CL scripts!\" (PyRAF에서 그렇다는 말) 라는 문장입니다. 바꿔 말하면 10% 정도는 IRAF와 다른 형태로 스크립트를 만들어야 제대로 작동한다는 말입니다. 그렇다면 과거에 IRAF의 기존 CL을 이용해 스크립트를 짜둔 사람들은 PyRAF를 이용하며 \"무엇이 안 돌아갈지 모르는\" 리스크를 감수하려 하지 않을 테지요. 정말 안타까운 것은, 기존 CL과 다른 결과가 나왔다는 것을 알려주는 에러 메세지 등이 없어서 직접 IRAF에서도 돌려보고 PyRAF에서도 돌려본 뒤 비교를 해야만 한다는 점입니다. \n",
     "\n",
     "그 외에도 만들어지던 당시에 Python 2를 기반으로 만들어져서 backward-incompatible 형식으로 만들어진 현대의 Python 3에서 작동이 어려운 점도 문제입니다 (물론 요즈음 들어 Python 3에서도 상당히 동일하게 작동되고 있습니다마는 어떤 알려지지 않은 버그가 있을지 모를 일입니다. 설사 버그가 알려져도 그것을 고치기 위한 인력과 예산이 예전만 하지 못합니다.). 그리고 여타의 Python 패키지들에 비해 매뉴얼이 잘 갖춰져 있지 않아 딱히 IRAF CL에 비해 코딩에 있어 장점이 없는 듯이 느껴진다는 점도. 또한 IRAF의 첫 번째 문제, 즉 추가적인 수정이나 보완 문제는 PyRAF도 같이 가지고 있습니다. 제대로 확인할 수는 없으나 근래 들어 IRAF/PyRAF로의 인력 배치는 많이 줄어들고 있는 것으로 보입니다. 이는 AstroPy 및 여타 Astropy affiliated 패키지들의 업데이트 주기와 PyRAF의 업데이트 주기를 비교해볼 때 알 수 있습니다. 비록 지속적으로 업데이트가 되고는 있으나, 그것이 얼마나 오래 효과적으로 지속될지 예측하기 어렵습니다. STScI의 과학 소프트웨어 팀의 Lim Pey-Lian은 2016년 말 공식 헬프 이메일 계정을 통해 제게 \"IRAF 지원은 점차 줄여가고 있으며 Python 대안인 Astropy를 이용해달라\"는 답을 준 적이 있습니다.\n",
+    "\n",
+    "### Introduction of PyRAF and Its Problems\n",
+    "PyRAF is an alternative, made of Python, for those problems of IRAF, especially to alleviate the complexity / debugging problem of CL. According to this [Link](http://iraf.net/forum/viewtopic.php?showtopic=97713&lastpost=true), the attempt to replace CL by Python has been ongoing in 1999. This [report](https://arxiv.org/abs/1610.03159) says such attempt for using Python started in 1998. Before 2000, when PyRAF was first being made, is the time when IRAF was not even a free software, so using totally-free Python is a very attractive trial. PyRAF works on Windows, too, though has many problems, since some functionalities are designed only for UNIX system *from the beginning*, and it is also clearly noted by STScI.\n",
+    "\n",
+    "This PyRAF has some problems, of course. First of all, **identical CL script gives different results in PyRAF for some cases**. This is implicitly explained in [PyRAF Tutorial](http://stsdas.stsci.edu/pyraf/doc.old/pyraf_tutorial/PythonPrereq.html), too: *\"You can even run more than 90% of IRAF CL scripts!\" (in PyRAF)*. In different perspective, it means ~ 10% of CL scripts does not work identically compared to that of IRAF. So if you have CL scripts you made when you were using IRAF, you wouldn't want to take risks of using PyRAF. You don't know which part will give different result from the original IRAF! No warning system of indicating the difference between IRAF and PyRAF is developed, so you have to run the script on IRAF and check whether it works correctly on PyRAF, which is just bothersome and inefficient.\n",
+    "\n",
+    "Other than that, PyRAF was made in Python 2, which means it may have unknown problem in the future (because of the backward-incompatible Python 3). Even if we clearly picked the bug, there is no much budget and humanpower to correct it now. Also, unlike many other Python packages, it has no firm manual, which makes it difficult to start and use efficiently. You wouldn't want to move to PyRAF, which doesn't seem to be *much* better than CL scripting. One of the important issues of PyRAF is the same as that of IRAF: No big update will be made in the near future, though we have many known bugs. It is difficult to manually check how much budget and human resources are being used for PyRAF, but you can compare the frequency of update of PyRAF and Astropy. Although PyRAF is being updated with certain period, we are not sure how long will it be maintained. Lim Pey-Lian, at Science Software Branch of STScI, replied to me via the official help email account that \n",
+    "\n",
+    "\"We are phasing out our IRAF support. Could you please try out photutils, a Python replacement for photometry tasks ...\" \n",
+    "\n",
     "\n",
     "\n",
     "### IDL의 사용과 문제\n",
     "\n",
     "이러한 문제들은 많은 사람들이 IRAF의 대안을 찾고 싶어하는 충분한 이유가 됩니다. 그러한 __해결책 중 하나가 IDL__이었습니다. 코딩이 쉽고 OS에 관계없이 사용할 수 있다는 점, 그리고 전문적인 프로그래머들이 지속적으로 언어를 안정적으로 유지해준다는 것이 장점이었습니다. 그러나 IDL은 또한 몇 가지 문제를 가지는데, __가장 중요한 것이 라이센스__이고, 그 외에 프로그램 언어로서의 문제 ([링크](https://en.wikipedia.org/wiki/IDL_(programming_language)#Problems)), 그림을 그릴 때에 있어 매우 느린 속도와 절차지향적 언어체계로 인한 비효율적인 3D-plot, 그리고 python에 비해 덜 체계화된 매뉴얼 등이 그것입니다. \n",
     "\n",
-    "라이센스는 IDL 이용자에겐 치명적인 문제일 수 밖에 없는데, 100만원 수준의 비용뿐 아니라 버전마다 새로운 라이센스를 구매해야 하기 때문에 소속 기관에서 매번 라이센스를 업데이트해 주지 않으면 언제 호환성 문제가 생길지 알 수 없기 때문입니다. 개인이 IDL 8 버전의 코드를 가지고 있는데 새로 취직한 기관에서는 IDL 6의 라이센스만 있다고 한다면 해당 코드가 제대로 작동하는지 다시 확인해야하는 번거로움이 있겠습니다. 그럼에도 불구하고 코딩의 용이성 덕분에 IRAF 대신 많은 관측소에서 사용되고 있습니다. \n",
+    "라이센스는 IDL 이용자에겐 치명적인 문제일 수 밖에 없는데, 100만원 수준의 비용뿐 아니라 버전마다 새로운 라이센스를 구매해야 하기 때문에 소속 기관에서 매번 라이센스를 업데이트해 주지 않으면 언제 호환성 문제가 생길지 알 수 없기 때문입니다. 소속기관에 있어 이러한 라이센스 비용은 상당한 부담이 됩니다 (사람이 많으면 그에 비례해 많은 돈이 필요하므로). 그래서, 개인이 IDL 8 버전의 코드를 가지고 있는데 새로 취직한 기관이 IDL 7의 라이센스만 있다고 한다면 해당 코드가 제대로 작동하는지, 제대로 된 결과를 주는지를 다시 확인해야하는 번거로움이 있습니다. 그럼에도 불구하고 코딩의 용이성 덕분에 IRAF 대신 많은 관측소에서 사용되고 있습니다. \n",
     "\n",
     "아래는 IDL과 IRAF가 사용되는 예시들입니다. \n",
     "\n",
     "* NASA의 IRTF에서 SpeX(분광관측기)로 관측하는 경우, 해당 관측기기 관측자료를 처리하기 위한 일반적인 코드가 IDL로 만들어져 있습니다. \n",
     "* 아주 소수의 경우에는 이미지 처리 과정을 IRAF만으로 할 수 있게 되어있는 경우도 있는데, 일본 혹카이도 나요로 시의 Pirka 망원경에 부착된 MSI 편광관측기의 경우 MSIRED라는 패키지가 있어, 모든 전처리과정 등을 IRAF만으로 할 수 있습니다. \n",
     "* 하와이 Subaru 망원경의 FOCAS 장비의 경우에는 IRAF와 IDL을 복합적으로 사용하는 FOCASRED라는 패키지가 제공됩니다. \n",
+    "\n",
+    "### Introduction of IDL and Its Problems\n",
+    "These are logical reasons why many people seek for IRAF-alternatives. **One of such solutions is IDL**. Easier scripting, OS-independency, and the fact that is maintained by software experts made astronomers relieved and rely on this software. However, IDL also has some problems: The most important one is the **license issue**, and secondly the problem as a programming language (see [here](https://en.wikipedia.org/wiki/IDL_(programming_language)#Problems)). Also it is extremely slow in plotting graphs, especially 3-D plotting, because it is a procedural programming language. Another important issue is that it is used by very minor groups of people, astronomy and bio-imaging, so there is not many structured manuals we can access.\n",
+    "\n",
+    "License is very critical for users, not only because its price (~ $1,000), but because you have to purchase license at **each time** when there is an update. You cannot use IDL 8.1 even if you have license of IDL 8.0. Institutions will be burdened with this, since many researchers should use the software, and the amount of required budget will go up almost linearly. If the institution does not support lisence fee, the compatibility problem arises: Say you have source code written in IDL 8, but the institution has license of IDL 7 only. Nevertheless, it is widely being used at observatories and institutions, due to its convenience for scripting compared to IRAF.\n",
+    "\n",
+    "The following is some examples of IRAF and IDL usage:\n",
+    "\n",
+    "* NASA IRTF: You will get IDL source codes to analyze SpeX (spectroscopy observation instrument) from IRTF.\n",
+    "* Nayoro Pirka, Japan: One of few cases of using IRAF. If you use MSI (multi spectroscopy imager), you will use MSIRED package, which are written fully in IRAF CL.\n",
+    "* Subaru: If you used FOCAS of Subaru at Hawai'i, you will receive FOCASRED package, which you may use either IDL or IRAF (recommended to use both).\n",
+    "\n",
     "\n",
     "\n",
     "### 대안으로서의 Python\n",
@@ -173,9 +212,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -187,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
