Preface under construction...

--- a/00_Preface-Korean.ipynb
+++ b/00_Preface-Korean.ipynb
@@ -14,16 +14,11 @@
     "* 강의자: Masateru Ishiguro \n",
     "* 조교:  Yoonsoo P Bach & Na-eun Shin\n",
     "\n",
-    "이 머릿말은 강의노트들을 만들 때에 고려한 기본적인 철학과, IRAF기반의 기존 천관실 체계에서 AstroPy 기반의 체계로 옮긴 이유 등을 서술하기 위한 조교의 변(辯)을 담고 있습니다. \n",
+    "이 머릿말은 강의노트들을 만들 때에 고려한 기본적인 철학과, IRAF기반의 기존 천관실 체계에서 AstroPy 기반의 체계로 옮긴 이유 등을 서술하기 위한 조교의 변(辯)을 담고 있습니다.\n",
     "\n",
+    "한국어 부분은 큰 변동이 있기 전에는 업데이트되지 않을 예정이며, 항상 영어판을 참고해주시기 바랍니다.\n",
     "\n",
-    "These notes were first made for \"Astronomical Observation 1\" (AO1 hereafter) of the Dept. of Astronomy of Seoul National University. \n",
-    "\n",
-    "* Lecturer: Prof. Masateru Ishiguro\n",
-    "* TA: Yoonsoo P. Bach & Na-eun Shin\n",
-    "\n",
-    "\n",
-    "This preface contains some comments to explain ground philosophy while making the lecture notes and the reason for transforming from previous IRAF-based AO1 system to Astropy-based system. "
+    "2017-03-13 15:20\n"
    ]
   },
   {
@@ -41,18 +36,7 @@
     "* [PyRAF](http://www.stsci.edu/institute/software_hardware/pyraf): Python 기반의 IRAF. 20세기 후반 IRAF의 몇 가지 단점을 보완하고자 만들어졌다.\n",
     "* CL (Command Language): IRAF에서 사용하는 언어이다. IRAF 자체는 C를 기반으로 만들어졌으며, 그 위에서 IRAF만의 기능들을 구현하고 스크립트나 코드를 만들 때에는 모두 CL을 사용한다. PyRAF개발은 기본적으로 이 CL의 비효율성을 보완하고자 시작되었다.\n",
     "* [Astropy](https://en.wikipedia.org/wiki/Astropy): 천문학과 관련된 유용한 코드들을 Python 기반으로 작성하는 것을 목표로 하는 *프로젝트의 이름*이다. 기본적으로 IRAF의 모든 기능을 완벽하게 구현할 수 있는 것에 더해, 새로운 프로그램이나 코드를 개발하는 것이 용이하도록 하는 것이 가장 큰 목표이다.\n",
-    "* [IDL](https://en.wikipedia.org/wiki/IDL_(programming_language)): Interactive Data Language. 천문학과 의학이미징 분야에서 특히 주로 사용되는 *상업용 소프트웨어*. 라이센스를 버전마다 따로 구매해야만 하기에 대다수의 기관들이 서로 다른 버전의 라이센스만을 가지는 경우가 많다. \n",
-    "\n",
-    "In the following notes, I will use these words without explaining in detail.\n",
-    "\n",
-    "* [IRAF](https://en.wikipedia.org/wiki/IRAF): Image Reduction and Analysis Facility\n",
-    "* [AURA](https://en.wikipedia.org/wiki/Association_of_Universities_for_Research_in_Astronomy): Association of Universities for Research in Astronomy. A consortium of universities in the U.S., and has observatories such as NOAO, STScI, NSO.\n",
-    "* [NOAO](https://en.wikipedia.org/wiki/National_Optical_Astronomy_Observatory): National Optical Astronomy Observatory. Develops and distributes IRAF.\n",
-    "* [STScI](https://en.wikipedia.org/wiki/Space_Telescope_Science_Institute): Space Telescope Science Institute. Now taking the role in developing PyRAF and Astropy to replace IRAF.\n",
-    "* [PyRAF](http://www.stsci.edu/institute/software_hardware/pyraf): IRAF based on Python language. Made to complement some shorts of IRAF.\n",
-    "* CL (Command Language): The programming language used in IRAF. IRAF itself is made by C language, and CL is used to realize some functionalities of IRAF and make scripts/codes. PyRAF is developed basically to overcome some limitations of this CL as a programming language.\n",
-    "* [Astropy](https://en.wikipedia.org/wiki/Astropy): The *name of a project* dreaming for making a single core package that is useful for any astrnomical studies. Not only to reproduce all the functionalities of IRAF, but to make it easier to develop original codes for any purpose.\n",
-    "* [IDL](https://en.wikipedia.org/wiki/IDL_(programming_language)): Interactive Data Language. A *commercial software* widely used in astronomy and bio-imaging fileds. There is a critical problem in license issue."
+    "* [IDL](https://en.wikipedia.org/wiki/IDL_(programming_language)): Interactive Data Language. 천문학과 의학이미징 분야에서 특히 주로 사용되는 *상업용 소프트웨어*. 라이센스를 버전마다 따로 구매해야만 하기에 대다수의 기관들이 서로 다른 버전의 라이센스만을 가지는 경우가 많다. "
    ]
   },
   {
@@ -78,21 +62,6 @@
     " \n",
     "마지막 문제점에 대한 에피소드 중 하나입니다만, 아직도 IRAF에서는 비항성천체의 측광을 위한 적합한 패키지가 없는 반면, Python에는 벌써 [TRIPPY](http://pure.qub.ac.uk/portal/files/118075999/Fraser_2016_AJ_151_158.pdf)라는 툴이 개발되어 공개돼 있습니다. IDL에서는 이미 수도 없이 많은 패키지들이 개발되어 있습니다. \n",
     "\n",
-    "### Problems of IRAF\n",
-    "For decades, IRAF of NOAO has become a virtual standard of astronomical image reduction process. As any other tools, it also have had some problems, and I want to point out two of them. The most important problem is that “required” updates of IRAF may not be there after version 2.16.1, at least officially, and **STScI is now decreasing humanpower to IRAF development / maintanance**. In other words, we cannot hope it to be fixed / updated even if there is serious bug or problem, and few such problems are there, though they are documented thoroughly by STScI. Even though such serious problems may be alleviated in the future, it is almost hopeless to “optimize” IRAF. There are a plethora of different ideas and algorithms to make computation faster, and are still being studied by frontier computer scientists, yet they may not be implemented to IRAF. This is critical, considering one single astronomical image is now becoming size of giga-bytes. My favorite example is [L.A. Cosmic](http://www.astro.yale.edu/dokkum/lacosmic/), which is a tool for removing cosmic-rays from astronomical images. We have both IRAF and Python versions (Python versions from `astroscrappy` actually uses C++, though it is fully usable on Python), and the Python version is order of magnitude faster than that of IRAF version. It can be up to ~100+ times faster, not only because it works efficiently, but also because IRAF does not support parallel computing. The amount of data we have to analyze increases exponentially over time. LSST, which will survey all-sky with a depth of Subaru, or JWST, which is next-generation-HST, decided to use Python against IRAF. \n",
-    "\n",
-    "Second problem of IRAF is because it is an **old** software, i.e., a problem that any other programs may have if they were developed decades ago, and it include:\n",
-    "\n",
-    "* Works only on 32-bit environment\n",
-    " * We need some trick to run IRAF on modern-standard, 64-bit, computers.\n",
-    " * This treatment is required almost only for IRAF. Almost none of modern softwares require 32-bit environment.\n",
-    "* Works only on UNIX-based OS\n",
-    " * It is bothersome for majority of Windows computer users to have redundant LINUX computer for IRAF purpose, unless MS supports UNIX-like environment in the very near future.\n",
-    "* CL has no debug functionality, so it is bad for large programming.\n",
-    " * Each observatory needs its own software for data reduction. CL is not good for such purpose.\n",
-    " * Actually, many different observatories makes their own routines with IDL, not CL, and distribute it to the observers.\n",
-    "\n",
-    "\n",
     "\n",
     "### PyRAF 의 등장과 문제\n",
     " \n",
@@ -102,14 +71,6 @@
     "\n",
     "그 외에도 만들어지던 당시에 Python 2를 기반으로 만들어져서 backward-incompatible 형식으로 만들어진 현대의 Python 3에서 작동이 어려운 점도 문제입니다 (물론 요즈음 들어 Python 3에서도 상당히 동일하게 작동되고 있습니다마는 어떤 알려지지 않은 버그가 있을지 모를 일입니다. 설사 버그가 알려져도 그것을 고치기 위한 인력과 예산이 예전만 하지 못합니다.). 그리고 여타의 Python 패키지들에 비해 매뉴얼이 잘 갖춰져 있지 않아 딱히 IRAF CL에 비해 코딩에 있어 장점이 없는 듯이 느껴진다는 점도. 또한 IRAF의 첫 번째 문제, 즉 추가적인 수정이나 보완 문제는 PyRAF도 같이 가지고 있습니다. 제대로 확인할 수는 없으나 근래 들어 IRAF/PyRAF로의 인력 배치는 많이 줄어들고 있는 것으로 보입니다. 이는 AstroPy 및 여타 Astropy affiliated 패키지들의 업데이트 주기와 PyRAF의 업데이트 주기를 비교해볼 때 알 수 있습니다. 비록 지속적으로 업데이트가 되고는 있으나, 그것이 얼마나 오래 효과적으로 지속될지 예측하기 어렵습니다. STScI의 과학 소프트웨어 팀의 Lim Pey-Lian은 2016년 말 공식 헬프 이메일 계정을 통해 제게 \"IRAF 지원은 점차 줄여가고 있으며 Python 대안인 Astropy를 이용해달라\"는 답을 준 적이 있습니다.\n",
     "\n",
-    "### Introduction of PyRAF and Its Problems\n",
-    "PyRAF is an alternative, made of Python, for those problems of IRAF, especially to alleviate the complexity / debugging problem of CL. According to this [Link](http://iraf.net/forum/viewtopic.php?showtopic=97713&lastpost=true), the attempt to replace CL by Python has been ongoing in 1999. This [report](https://arxiv.org/abs/1610.03159) says such attempt for using Python started in 1998. Before 2000, when PyRAF was first being made, is the time when IRAF was not even a free software, so using totally-free Python is a very attractive trial. PyRAF works on Windows, too, though has many problems, since some functionalities are designed only for UNIX system *from the beginning*, and it is also clearly noted by STScI.\n",
-    "\n",
-    "This PyRAF has some problems, of course. First of all, **identical CL script gives different results in PyRAF for some cases**. This is implicitly explained in [PyRAF Tutorial](http://stsdas.stsci.edu/pyraf/doc.old/pyraf_tutorial/PythonPrereq.html), too: *\"You can even run more than 90% of IRAF CL scripts!\" (in PyRAF)*. In different perspective, it means ~ 10% of CL scripts does not work identically compared to that of IRAF. So if you have CL scripts you made when you were using IRAF, you wouldn't want to take risks of using PyRAF. You don't know which part will give different result from the original IRAF! No warning system of indicating the difference between IRAF and PyRAF is developed, so you have to run the script on IRAF and check whether it works correctly on PyRAF, which is just bothersome and inefficient.\n",
-    "\n",
-    "Other than that, PyRAF was made in Python 2, which means it may have unknown problem in the future (because of the backward-incompatible Python 3). Even if we clearly picked the bug, there is no much budget and humanpower to correct it now. Also, unlike many other Python packages, it has no firm manual, which makes it difficult to start and use efficiently. You wouldn't want to move to PyRAF, which doesn't seem to be *much* better than CL scripting. One of the important issues of PyRAF is the same as that of IRAF: No big update will be made in the near future, though we have many known bugs. It is difficult to manually check how much budget and human resources are being used for PyRAF, but you can compare the frequency of update of PyRAF and Astropy. Although PyRAF is being updated with certain period, we are not sure how long will it be maintained. Lim Pey-Lian, at Science Software Branch of STScI, replied to me via the official help email account that \n",
-    "\n",
-    "\"We are phasing out our IRAF support. Could you please try out photutils, a Python replacement for photometry tasks ...\" \n",
     "\n",
     "\n",
     "\n",
@@ -124,18 +85,6 @@
     "* NASA의 IRTF에서 SpeX(분광관측기)로 관측하는 경우, 해당 관측기기 관측자료를 처리하기 위한 일반적인 코드가 IDL로 만들어져 있습니다. \n",
     "* 아주 소수의 경우에는 이미지 처리 과정을 IRAF만으로 할 수 있게 되어있는 경우도 있는데, 일본 혹카이도 나요로 시의 Pirka 망원경에 부착된 MSI 편광관측기의 경우 MSIRED라는 패키지가 있어, 모든 전처리과정 등을 IRAF만으로 할 수 있습니다. \n",
     "* 하와이 Subaru 망원경의 FOCAS 장비의 경우에는 IRAF와 IDL을 복합적으로 사용하는 FOCASRED라는 패키지가 제공됩니다. \n",
-    "\n",
-    "### Introduction of IDL and Its Problems\n",
-    "These are logical reasons why many people seek for IRAF-alternatives. **One of such solutions is IDL**. Easier scripting, OS-independency, and the fact that is maintained by software experts made astronomers relieved and rely on this software. However, IDL also has some problems: The most important one is the **license issue**, and secondly the problem as a programming language (see [here](https://en.wikipedia.org/wiki/IDL_(programming_language)#Problems)). Also it is extremely slow in plotting graphs, especially 3-D plotting, because it is a procedural programming language. Another important issue is that it is used by very minor groups of people, astronomy and bio-imaging, so there is not many structured manuals we can access.\n",
-    "\n",
-    "License is very critical for users, not only because its price (~ $1,000), but because you have to purchase license at **each time** when there is an update. You cannot use IDL 8.1 even if you have license of IDL 8.0. Institutions will be burdened with this, since many researchers should use the software, and the amount of required budget will go up almost linearly. If the institution does not support lisence fee, the compatibility problem arises: Say you have source code written in IDL 8, but the institution has license of IDL 7 only. Nevertheless, it is widely being used at observatories and institutions, due to its convenience for scripting compared to IRAF.\n",
-    "\n",
-    "The following is some examples of IRAF and IDL usage:\n",
-    "\n",
-    "* NASA IRTF: You will get IDL source codes to analyze SpeX (spectroscopy observation instrument) from IRTF.\n",
-    "* Nayoro Pirka, Japan: One of few cases of using IRAF. If you use MSI (multi spectroscopy imager), you will use MSIRED package, which are written fully in IRAF CL.\n",
-    "* Subaru: If you used FOCAS of Subaru at Hawai'i, you will receive FOCASRED package, which you may use either IDL or IRAF (recommended to use both).\n",
-    "\n",
     "\n",
     "\n",
     "### 대안으로서의 Python\n",
