--- a/05_IRAF_Tutorial.ipynb
+++ b/05_IRAF_Tutorial.ipynb
@@ -45,7 +45,7 @@
     "    \n",
     "I recommend to use PyRAF, since AstroConda does not fully guarantee the stability of IRAF CL. The `IMEXAM`, for example, does not correctly work if you use `cl`. You will see the following on terminal with the prompt \"`-->`\":\n",
     "\n",
-    "<img src='../images/IRAF_01.png' width='500'>"
+    "<img src='images/IRAF_01.png' width='500'>"
    ]
   },
   {
@@ -60,7 +60,7 @@
     "\n",
     "Display the image:\n",
     "\n",
-    "<img src='../images/IRAF_02.png' width='500'>\n",
+    "<img src='images/IRAF_02.png' width='500'>\n",
     "\n",
     "* **TIP**: It's better to append the ampersand (`&`) at the end of `ds9`. Try without it and see what happens.\n",
     "* **TIP**: Always try to use `tab` key on your keyboard to \"autocomplete\"!\n"
@@ -91,7 +91,7 @@
     "\n",
     "We will combine all 12 images in the `bias/` directory, and make one output named `bias.fits` using so-called **median combine**, while all other options left as default:\n",
     "\n",
-    "<img src='../images/IRAF_bias_combine.png' width='500'>\n",
+    "<img src='images/IRAF_bias_combine.png' width='500'>\n",
     "\n",
     "In IRAF commands, `@filename` means \"open the file named `filename`, and put the contents here\". Since `bias.list` contains the list of file names of bias images, \n",
     "\n",
@@ -120,7 +120,7 @@
     "\n",
     "I want to make the combined image as `flat0.fits` first. Then save the result of subtracting bias, i.e., \"`flat0 - bias`\", as `flat.fits`. Do the median combine first:\n",
     "\n",
-    "<img src='../images/IRAF_flat_combine.png' width='500'>\n",
+    "<img src='images/IRAF_flat_combine.png' width='500'>\n",
     "\n",
     "Now copy the master bias to here and subtract it from the combined flat:\n",
     "\n",
