--- a/04_Ground_Based_Concept.ipynb
+++ b/04_Ground_Based_Concept.ipynb
@@ -52,9 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -250,9 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -340,7 +336,7 @@
     "\t\t\t\t\t\t+ \\frac{n_a^2 \\sigma_s^2}{n_s} }}\n",
     "\t\t\t\t{(N_{\\rm tot} - n_s m_s)g}\\\\\n",
     "        &= 1.0857 \\frac{\\sqrt{ \\frac{N_{\\rm tot} }{g}\n",
-    "\t\t\t\t\t\t+ n_a (\\sigma_s/g)^2 \n",
+    "\t\t\t\t\t\t+ n_a (\\frac{\\sigma_s}{g})^2 \n",
     "\t\t\t\t\t\t+ \\frac{n_a^2 (\\sigma_s/g)^2}{n_s} }}\n",
     "\t\t\t\t{N_{\\rm tot} - n_s m_s}  ~,\\\\\n",
     "\t\\sigma_s &= m_s g + R^2 \\quad({\\rm Poissonian~+~Gaussian})\n",
@@ -356,9 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -429,9 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -467,9 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -553,9 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -630,9 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -677,7 +663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
