--- a/05_IRAF_Tutorial.ipynb
+++ b/05_IRAF_Tutorial.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run PyRAF\n",
+    "## 1. Run PyRAF\n",
     "\n",
     "You can start IRAF environment (*not* IRAF itself!) by typing\n",
     "\n",
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Display Image\n",
+    "## 2. Display Image\n",
     "\n",
     "PyRAF supports few LINUX commands, such as `ls` or `cd` without an exclamation mark (`!`). But to display image, you must use `!ds9` or `!ginga`. You should also use (`!`) when delete files using `rm`. \n",
     "\n",
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bias Combine\n",
+    "## 3. Bias Combine\n",
     "\n",
     "First, make the list of bias files. Go to the bias directory by \"`--> cd bias`\" and type\n",
     "\n",
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Flat Combine\n",
+    "## 4. Flat Combine\n",
     "\n",
     "To make master flat, you have to subtract master bias from combined flat image. All are identical as that of bias, but subtract master bias from the final combined flat.\n",
     "\n",
@@ -128,7 +128,7 @@
     "    --> imarith flat0.fits - bias.fits flat.fits\n",
     "    --> !ds9 -zscale flat.fits &\n",
     "    \n",
-    "It's very intuitive: `IMARITH image1 operator image2 output` means do the operation (`operator` can be `+, -, *, /`) to images (`image1`, `image2`) and save the result as `output`. `IMARITH` of course means image arithmentics. You can open the full options window as you did for `IMCOMBINE` by typing\n",
+    "It's very intuitive: \"`IMARITH image1 operator image2 output`\" means do the operation (`operator` can be `+, -, *, /`) to images (`image1`, `image2`) and save the result as \"`output`\". `IMARITH` of course means image arithmetics. You can open the full options window as you did for `IMCOMBINE` by typing\n",
     "\n",
     "    --> epar imarith\n",
     "    \n",
@@ -141,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Preprocessing\n",
+    "## 5. Preprocessing\n",
     "\n",
     "Preprocessing is simply \"(raw image - master bias)/(master flat)\". \n",
     "\n",
@@ -192,7 +192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## File Information\n",
+    "## 6. File Information\n",
     "\n",
     "You may want to see the brief information, such as statistics or the so-called \"header information\", of images. You can do this via many ways.\n",
     "\n",
@@ -323,7 +323,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Primitive Photometry\n",
+    "## 7. Primitive Photometry\n",
     "\n",
     "### `IMEXAMINE`\n",
     "For photometry, let's use `IMEXAM` first. IRAF becomes extremely powerful when you use the interactive mode with the aid of `SAO ds9`. \n",
@@ -393,7 +393,7 @@
     "collapsed": true
    },
    "source": [
-    "## More on Photometry\n",
+    "## 8. More on Photometry\n",
     "\n",
     "What you have obtained from `IMEXAM` and `DAOEDIT` are very primitive results. In theory, the seeing effect should be nearly identical to all the point sources in the image, so we should have same FWHM for each star. What we do is to accept average of the FWHMs of the stars I got above. You may have now realized that we had to choose stars that are quite isolated! If there is another star near it, then its profile may have been polluted, and thus the FWHM is unreliable. \n",
     "\n",
@@ -556,7 +556,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## For Your Future... `DAOFIND`\n",
+    "## 9. For Your Future... `DAOFIND`\n",
     "\n",
     "Although I will not teach more on IRAF than this, you may need to learn using IRAF for photometry (even psf photometry) in the future, because many older generation prefers IRAF due to the *legacy*. I want to put one more information on `PHOT` task for your future reference and then the `DAOFIND`.\n",
     "\n",
@@ -608,6 +608,15 @@
     "\n",
     "Here, `sharpness`, `sround`, and `ground` are the parameters used to determine whether the source is a star-like one or not. They are defined in the [Stetson 1987](http://adsabs.harvard.edu/abs/1987PASP...99..191S) paper for the first time. `sharpness` is a measure of \"how sharp the target is\", and is kind of \"peak value / sky value\", roughly speaking. `sround` and `ground` are roundness parameters: `sround` is to measure the roundness based on the symmetric property of the source, and `ground` is based on the marginalized Gaussian fit to the object."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -626,7 +635,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
