--- a/03_Get_the_Taste.ipynb
+++ b/03_Get_the_Taste.ipynb
@@ -35,9 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -97,9 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -144,10 +140,9 @@
     "\n",
     "The following is an example of doing `pick` on `ginga`, and you can see that the object has quite circular shape from the FWHM fitting. \n",
     "\n",
-    "![M87_ginga](../HST_Tutorial/M87_ginga.png)\n",
+    "<img src='HST_Tutorial/M87_ginga.png' width=800>\n",
     "\n",
-    "\n",
-    "* **Question** What is the feature near the center of the elliptical galaxy?\n",
+    "* **Question** What is the bar-like feature near the elliptical galaxy? Do you think it is going in to? Or is i out from the galaxy?\n",
     "* **Question** Why do you think the image is slightly \"rotated\" by default?\n",
     " * Hint: look at the top-left panel (small image) of the screenshot\n",
     "\n",
@@ -158,9 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -270,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
